@@ -50,6 +50,8 @@ Version 7.9 xx-xxx-09
     
 11. Unicode property support in character classes was not working for 
     characters (bytes) greater than 127 when not in UTF-8 mode.
+    
+12. Added the -M command line option to pcretest. 
       
 
 Version 7.8 05-Sep-08
